--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/cli": "1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "7.2.6",
+    "@arcgis/webpack-plugin": "^4.11.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^11.9.5",
     "codelyzer": "^4.5.0",
@@ -50,6 +51,11 @@
     "protractor": "^5.4.2",
     "ts-node": "^8.0.2",
     "tslint": "^5.0.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.1.1",
+    "webpack": "^3.12.0",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-dev-server": "^2.11.2",
+    "webpack-filter-warnings-plugin": "^1.2.1",
+    "webpack-merge": "^4.2.1"
   }
 }
