--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "homepage": "https://github.com/kelylah/arcgis-ng#readme",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
+    "start": "webpack-dev-server --port=4200",
+    "build": "webpack",
+    "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "protractor ./protractor.conf.js",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
   },
   "dependencies": {
     "@angular/animations": "7.2.6",
@@ -52,10 +53,28 @@
     "ts-node": "^8.0.2",
     "tslint": "^5.0.0",
     "typescript": "~3.1.1",
-    "webpack": "^3.12.0",
+    "webpack": "~3.11.0",
     "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-dev-server": "^2.11.2",
+    "webpack-dev-server": "~2.11.0",
     "webpack-filter-warnings-plugin": "^1.2.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "@angular-devkit/core": "0.3.2",
+    "@ngtools/webpack": "1.10.2",
+    "autoprefixer": "^7.2.3",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.29.0",
+    "less-loader": "^4.0.5",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.10",
+    "postcss-url": "^7.1.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.6",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "style-loader": "^0.19.1",
+    "stylus-loader": "^3.0.1",
+    "url-loader": "^0.6.2",
+    "circular-dependency-plugin": "^4.2.1",
+    "copy-webpack-plugin": "~4.4.1",
+    "uglifyjs-webpack-plugin": "^1.1.8"
   }
 }
