Updating packages after ejecting. arcgis-js types added.

--- a/package.json
+++ b/package.json
@@ -35,13 +35,22 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/core": "0.3.2",
     "@angular/cli": "1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "7.2.6",
     "@arcgis/webpack-plugin": "^4.11.0",
+    "@ngtools/webpack": "1.10.2",
+    "@types/arcgis-js-api": "^4.11.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^11.9.5",
+    "autoprefixer": "^7.2.3",
+    "circular-dependency-plugin": "^4.2.1",
     "codelyzer": "^4.5.0",
+    "copy-webpack-plugin": "~4.4.1",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.29.0",
+    "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "^2.6.2",
     "jasmine-spec-reporter": "^4.1.0",
     "karma": "^1.7.0",
@@ -49,32 +58,24 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.2",
-    "ts-node": "^8.0.2",
-    "tslint": "^5.0.0",
-    "typescript": "~3.1.1",
-    "webpack": "~3.11.0",
-    "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-dev-server": "~2.11.0",
-    "webpack-filter-warnings-plugin": "^1.2.1",
-    "webpack-merge": "^4.2.1",
-    "@angular-devkit/core": "0.3.2",
-    "@ngtools/webpack": "1.10.2",
-    "autoprefixer": "^7.2.3",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.29.0",
     "less-loader": "^4.0.5",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.10",
     "postcss-url": "^7.1.2",
+    "protractor": "^5.4.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
-    "istanbul-instrumenter-loader": "^3.0.0",
     "style-loader": "^0.19.1",
     "stylus-loader": "^3.0.1",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.0.0",
+    "typescript": "~3.1.1",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "url-loader": "^0.6.2",
-    "circular-dependency-plugin": "^4.2.1",
-    "copy-webpack-plugin": "~4.4.1",
-    "uglifyjs-webpack-plugin": "^1.1.8"
+    "webpack": "~3.11.0",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-dev-server": "~2.11.0",
+    "webpack-filter-warnings-plugin": "^1.2.1",
+    "webpack-merge": "^4.2.1"
   }
 }
