--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@angular/cli": "1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "7.2.6",
-    "@arcgis/webpack-plugin": "^4.11.0",
+    "@arcgis/webpack-plugin": "4.11.0",
     "@ngtools/webpack": "1.10.2",
-    "@types/arcgis-js-api": "^4.11.0",
+    "@types/arcgis-js-api": "4.11.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "^11.9.5",
     "autoprefixer": "^7.2.3",
