--- a/package.json
+++ b/package.json
@@ -1,81 +1,53 @@
 {
   "name": "arcgis-ng",
-  "version": "1.0.0",
-  "description": "Sample Angular app with ArcGIS JS API",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kelylah/arcgis-ng.git"
-  },
-  "bugs": {
-    "url": "https://github.com/kelylah/arcgis-ng/issues"
-  },
-  "homepage": "https://github.com/kelylah/arcgis-ng#readme",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "webpack-dev-server --port=4200",
-    "build": "webpack",
-    "test": "karma start ./karma.conf.js",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
     "lint": "ng lint",
-    "e2e": "protractor ./protractor.conf.js",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
+    "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.6",
-    "@angular/common": "7.2.6",
-    "@angular/compiler": "^7.2.2",
-    "@angular/core": "7.2.6",
-    "@angular/forms": "7.2.6",
-    "@angular/http": "7.2.6",
-    "@angular/platform-browser": "7.2.6",
-    "@angular/platform-browser-dynamic": "7.2.6",
-    "@angular/router": "7.2.6",
-    "core-js": "^2.4.1",
-    "rxjs": "^6.4.0",
-    "zone.js": "0.8.26"
+    "@angular/animations": "~7.2.0",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "~7.2.0",
+    "@angular/forms": "~7.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/core": "0.3.2",
-    "@angular/cli": "1.7.4",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "7.2.6",
+    "@angular-builders/custom-webpack": "^7.0",
+    "@angular-builders/dev-server": "^7.0.0",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "~7.2.4",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
     "@arcgis/webpack-plugin": "4.12.0",
-    "@ngtools/webpack": "1.10.2",
     "@types/arcgis-js-api": "4.12.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^11.9.5",
-    "autoprefixer": "^7.2.3",
-    "circular-dependency-plugin": "^4.2.1",
-    "codelyzer": "^4.5.0",
-    "copy-webpack-plugin": "~4.4.1",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.29.0",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "^2.6.2",
-    "jasmine-spec-reporter": "^4.1.0",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.1.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "^1.1.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "less-loader": "^4.0.5",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.10",
-    "postcss-url": "^7.1.2",
-    "protractor": "^5.4.2",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "stylus-loader": "^3.0.1",
-    "ts-node": "^8.0.2",
-    "tslint": "^5.0.0",
-    "typescript": "~3.1.1",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "url-loader": "^0.6.2",
-    "webpack": "~3.11.0",
-    "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-dev-server": "~2.11.0",
-    "webpack-filter-warnings-plugin": "^1.2.1",
-    "webpack-merge": "^4.2.1"
+    "node-sass": "^4.14.1",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2"
   }
 }
