--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@angular/platform-browser": "7.2.6",
     "@angular/platform-browser-dynamic": "7.2.6",
     "@angular/router": "7.2.6",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "rxjs": "^6.4.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
